<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_catatan"
            android:icon="@drawable/ic_note"
            android:title="@string/nav_catatan" />
        <item
            android:id="@+id/nav_sampah"
            android:icon="@drawable/sampah"
            android:title="Sampah" />
        <item
            android:id="@+id/nav_edit_profil"
            android:icon="@drawable/ic_account"
            android:title="@string/edit_profil" />
        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/edit_password" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="About Us" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="Logout" />
    </group>

</menu>
